Modify constructor; update toString()